fixed gap in footer on mobile

--- a/site/styles/custom.less
+++ b/site/styles/custom.less
@@ -134,4 +134,8 @@ html:not(.touch-styles) body:not(.force-mobile-nav) .nav-wrapper .folder .subnav
   fill: @socialButtonColor;
 }
 
+// Remove back-to-top empty space (which only appears on mobile)
+div.nav-wrapper.back-to-top-nav {
+  display: none !important;
+}
 
